# TeacherBotV2

./: CMakeLists.txt  README.md  main.cpp
botstaff/: CMakeLists.txt
botstaff/include/botstaff/: States.hpp  Vocabular.hpp
botstaff/include/botstaff/FSM/: FSM.hpp  Filter.hpp  Headers.hpp  LessonCreation.hpp  Messages.hpp  UserRegistration.hpp
botstaff/include/botstaff/database/: DB.hpp  Quiries.hpp
botstaff/include/botstaff/handlers/: Handlers.hpp  TeacherHandlers.hpp  UserHandlers.hpp
botstaff/include/botstaff/keyboards/: Keyboards.hpp  TeacherKeyboards.hpp  UserKeyboards.hpp
botstaff/include/botstaff/utils/: CalendarUtils.hpp  Utils.hpp
botstaff/src/: States.cpp
botstaff/src/FSM/: Filter.cpp  LessonCreation.cpp  UserRegistration.cpp
botstaff/src/database/: DB.cpp
botstaff/src/handlers/: Handlers.cpp  TeacherHandlers.cpp  UserHandlers.cpp
botstaff/src/keyboards/: Keyboards.cpp  TeacherKeyboards.cpp  UserKeyboards.cpp
botstaff/src/utils/: CalendarUtils.cpp  Utils.cpp
cppinfra/: docker-compose.local.yml  docker-compose.yml
db_setup/: db_entry.sh  db_setup.sql
